# Aider_Cost

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cout_Aider.py  pyproject.toml
.github/workflows/: ci.yml
src/aider_stats/: __init__.py  cli.py  models.py  parser.py  stats.py  ui.py
