[project]
name = "aider-cost"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "rich==15.0.0",
]
[project]
name = "aider-stats"
version = "0.1.0"
description = "A CLI tool to analyze Aider chat history costs and tokens."
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
aider-stats = "aider_stats.cli:main"
