[project]
name = "aider-stats"
version = "0.1.0"
description = "A CLI tool to analyze Aider chat history costs and tokens."
authors = [{name = "Odin Ramaut"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "rich==15.0.0",
    "rich-argparse==1.6.0",
]

[project.scripts]
aider-stats = "aider_stats.cli:main"


[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "ARG", "PTH", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
